Fixed page jumps

--- a/PrescriptchainFinder/assets/css/main.css
+++ b/PrescriptchainFinder/assets/css/main.css
@@ -1082,12 +1082,12 @@
 
 /* Me */
 
-	#me .pic {
+	#Home .pic {
 		position: relative;
 		display: block;
 	}
 
-		#me .pic:before {
+		#Home .pic:before {
 			content: '';
 			position: absolute;
 			top: 0;
@@ -1336,12 +1336,12 @@
 
 		/* Me */
 
-			#me {
+			#Home {
 				padding: 0;
 				height: 20em;
 			}
 
-				#me .pic {
+				#Home .pic {
 					display: block;
 					position: absolute;
 					right: -1px;
@@ -1350,13 +1350,13 @@
 					text-decoration: none;
 				}
 
-					#me .pic img {
+					#Home .pic img {
 						position: relative;
 						display: block;
 						height: 100%;
 					}
 
-					#me .pic .arrow {
+					#Home .pic .arrow {
 						display: block;
 						position: absolute;
 						right: 0;
@@ -1377,23 +1377,23 @@
 						transition: width .15s ease-in-out, padding-right .15s ease-in-out;
 					}
 
-						#me .pic .arrow:before {
+						#Home .pic .arrow:before {
 							position: relative;
 							padding-right: 0;
 							top: 0.125em;
 						}
 
-						#me .pic .arrow span {
+						#Home .pic .arrow span {
 							display: block;
 							text-indent: -9999px;
 						}
 
-					#me .pic:hover .arrow {
+					#Home .pic:hover .arrow {
 						width: 3em;
 						padding-right: 0.25em;
 					}
 
-				#me header {
+				#Home header {
 					position: absolute;
 					left: 0;
 					top: 0;
@@ -1402,14 +1402,14 @@
 					margin-left: 2.5em;
 				}
 
-					#me header > h1 {
+					#Home header > h1 {
 						position: absolute;
 						left: 0;
 						bottom: 52.5%;
 						margin: 0;
 					}
 
-					#me header > p {
+					#Home header > p {
 						position: absolute;
 						left: 0;
 						top: 52.5%;
@@ -1539,29 +1539,29 @@
 
 		/* Me */
 
-			#me .pic {
+			#Home .pic {
 				width: 100%;
 			}
 
-				#me .pic img {
+				#Home .pic img {
 					display: block;
 					width: 100%;
 				}
 
-				#me .pic .arrow {
+				#Home .pic .arrow {
 					display: none;
 				}
 
-			#me header {
+			#Home header {
 				text-align: center;
 			}
 
-				#me header > h1 {
+				#Home header > h1 {
 					font-size: 2.15em;
 					letter-spacing: -0.025em;
 				}
 
-				#me header > p {
+				#Home header > p {
 					font-size: 1.25em;
 				}
 
